Continued restyled the application

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Rock+Salt&display=swap');
+@font-face {
+    font-family: Err0r;
+    src: url("./Err0r-14mg.otf");
+}
 
 html {
     background-color: #212121;
