Fixed typography build failure

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Rock+Salt&display=swap');
 @font-face {
     font-family: Err0r;
-    src: url("./Err0r-14mg.otf");
+    src: url("./assets/Err0r-14mg.otf");
 }
 
 html {
